# llm-tools-clojure

./: README.md  llm_tools_clojure.py  pyproject.toml
tests/: test_tools_simpleeval.py
